Adds task to install docker

--- a/site.yml
+++ b/site.yml
@@ -17,6 +17,9 @@
   hosts: all
   become: true
   roles:
+    - name: docker
+      tags:
+        - docker
     - name: shellcheck
       tags:
         - shellcheck
