--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -3,3 +3,19 @@
   yum:
     name: docker
     state: latest
+
+- block:
+    - name: Downlod get-pip
+      uri:
+        url: https://bootstrap.pypa.io/get-pip.py
+        method: GET
+        dest: /tmp/
+        create: /tmp/get-pip.py
+
+    - name: Install pip
+      command: "python /tmp/get-pip.py"
+
+- name: Install docker-compose
+  pip:
+    name: docker-compose
+    state: latest
