Haskel Tool Stack should be included in a block tasks
Adds common role

--- a/roles/shellcheck/tasks/main.yml
+++ b/roles/shellcheck/tasks/main.yml
@@ -1,18 +1,19 @@
 ---
-- name: Download The Haskel Tool Stack
-  uri:
-    url: https://get.haskellstack.org/
-    method: GET
-    dest: /tmp/install_stack.sh
-    creates: /tmp/install_stack.sh
+- block:
+    - name: Download The Haskel Tool Stack
+      uri:
+        url: https://get.haskellstack.org/
+        method: GET
+        dest: /tmp/install_stack.sh
+        creates: /tmp/install_stack.sh
 
-- name: Install The Haskel Tool Stack
-  command: "sh /tmp/install_stack.sh"
-  args:
-    creates: /usr/local/bin/stack
+    - name: Install The Haskel Tool Stack
+      command: "sh /tmp/install_stack.sh"
+      args:
+        creates: /usr/local/bin/stack
 
-- name: Stack Setup
-  command: "/usr/local/bin/stack setup"
+    - name: Stack Setup
+      command: "/usr/local/bin/stack setup"
 
 - name: Install Shellcheck
   command: "/usr/local/bin/stack install ShellCheck"
