Adds to intall epel-release

--- a/site.yml
+++ b/site.yml
@@ -17,6 +17,9 @@
   hosts: all
   become: true
   roles:
+    - name: common
+      tags:
+        - common
     - name: docker
       tags:
         - docker
