Adds gitlab-runner to site.yml

--- a/site.yml
+++ b/site.yml
@@ -20,9 +20,15 @@
     - name: common
       tags:
         - common
+
+    - name: gitlab-runner
+      tags:
+        - gitlab-runner
+
     - name: docker
       tags:
         - docker
+
     - name: shellcheck
       tags:
         - shellcheck
