--- a/roles/gitlab-runner/tasks/main.yml
+++ b/roles/gitlab-runner/tasks/main.yml
@@ -34,3 +34,11 @@
     name: gitlab-runner
     state: started
     enabled: true
+
+- name: register gitlab-runner with gitlab
+  command: "{{ gitlab_runner_path }} register"
+  environment:
+    CI_SERVER_URL: "{{ gitlab_runner_ci_server_url }}"
+    RUNNER_NAME: "{{ gitlab_runner_name }}"
+    REGISTRATION_TOKEN: "{{ gitlab_runner_token }}"
+    REGISTER_NON_INTERACTIVE: true
