--- a/extra-vars.yml.sample
+++ b/extra-vars.yml.sample
@@ -1,3 +1,5 @@
+gitlab_runner_ci_server_ip: "127.0.0.1"
+gitlab_runner_ci_server_domain: "gitlab.ansible.com"
 gitlab_runner_ci_server_url: "https://gitlab.ansible.com"
 gitlab_runner_name: "extra_injected_runner"
 gitlab_runner_token: "0123456789_ABC"
