--- a/roles/gitlab-runner/defaults/main.yml
+++ b/roles/gitlab-runner/defaults/main.yml
@@ -5,7 +5,10 @@ gitlab_runner_home: /home/gitlab-runner
 gitlab_runner_shell: /bin/bash
 gitlab_runner_executor: shell
 gitlab_runner_debug: false
+gitlab_runner_no_dns: true
 
+gitlab_runner_ci_server_ip: "127.0.0.1"
+gitlab_runner_ci_server_domain: "gitlab.example.com"
 gitlab_runner_ci_server_url: "https://gitlab.example.com"
 gitlab_runner_name: "ansibler_managed_runner"
 gitlab_runner_token: "token_sample"
