Use environment 'REGISTRATION_TOKEN' instead of CI_SERVER_TOKEN
because, we hit the same probrem below.

https://forum.gitlab.com/t/gitlab-runner-register-set-concurrency/3784

--- a/roles/gitlab-runner/tasks/main.yml
+++ b/roles/gitlab-runner/tasks/main.yml
@@ -48,7 +48,7 @@
   command: "{{ gitlab_runner_path }} register"
   environment:
     CI_SERVER_URL: "{{ gitlab_runner_ci_server_url }}"
-    CI_SERVER_TOKEN: "{{ gitlab_runner_token }}"
+    REGISTRATION_TOKEN: "{{ gitlab_runner_token }}"
     RUNNER_NAME: "{{ gitlab_runner_name }}"
     REGISTER_NON_INTERACTIVE: true
     RUNNER_EXECUTOR: "{{ gitlab_runner_executor }}"
